add town square; fix some room joining logic; firecracker item implemented; improved room player structures; improve inventory handling; update xml